OAuth2 (#98)
* OAuth Login
* Use email as user ID
* Self-Signed JWT.
