# server/src/main/java/dmo/server/security/JwtService.java
@@ -1,90 +1,176 @@
 package dmo.server.security;
 
-import io.jsonwebtoken.*;
-import io.jsonwebtoken.security.Keys;
+import com.nimbusds.jose.JOSEException;
+import com.nimbusds.jose.JOSEObjectType;
+import com.nimbusds.jose.JWSAlgorithm;
+import com.nimbusds.jose.JWSHeader;
+import com.nimbusds.jose.crypto.MACSigner;
+import com.nimbusds.jose.crypto.MACVerifier;
+import com.nimbusds.jose.util.ByteUtils;
+import com.nimbusds.jwt.JWTClaimsSet;
+import com.nimbusds.jwt.SignedJWT;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.lang.Nullable;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.CredentialsExpiredException;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.stereotype.Component;
+import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.util.StringUtils;
 
-import javax.annotation.PostConstruct;
-import java.security.Key;
+import java.nio.charset.StandardCharsets;
+import java.security.SecureRandom;
+import java.text.ParseException;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.Date;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
-@Component
+/**
+ * @see <a href="https://connect2id.com/products/nimbus-jose-jwt">nimbus-jose-jwt</a>
+ */
 @Slf4j
 public class JwtService {
-    @Value("${jwt.key:}")
-    private String jwtKey;
+    private final JWSAlgorithm algorithm;
+    private final MACSigner signer;
+    private final MACVerifier verifier;
+    private final Duration expiration = Duration.ofDays(1L);
 
-    private Key signKey;
+    public JwtService(@Nullable String secret) {
+        this(secret, JWSAlgorithm.HS256);
+    }
 
-    private JwtParser jwtParser;
+    protected JwtService(String jwtKey, JWSAlgorithm algorithm) {
+        this(getOrGenerateSecret(jwtKey, algorithm), algorithm);
+    }
 
-    private static final String USER_ID_CLAIM = "user_id";
-    private static final String AUTHORITIES_CLAIM = "authorities";
-
-    @PostConstruct
-    public void postConstruct() {
-        if (StringUtils.isEmpty(jwtKey)) {
-            signKey = Keys.secretKeyFor(SignatureAlgorithm.HS256);
-            log.warn("Using generated JWT key, consider setting it");
-        } else {
-            signKey = Keys.hmacShaKeyFor(jwtKey.getBytes());
+    protected JwtService(byte[] secret, JWSAlgorithm algorithm) {
+        try {
+            this.signer = new MACSigner(secret);
+            this.verifier = new MACVerifier(secret);
+            this.algorithm = algorithm;
+        } catch (JOSEException e) {
+            throw new IllegalArgumentException("Failed to create JwtService", e);
         }
-        jwtParser = Jwts.parserBuilder()
-                .setSigningKey(signKey)
+    }
+
+    private static final String AUTHORITIES_CLAIM = "authorities";
+    private static final String FULL_NAME_CLAIM = "fullName";
+    private static final String GIVEN_NAME_CLAIM = "givenName";
+    private static final String FAMILY_NAME_CLAIM = "familyName";
+    private static final String MIDDLE_NAME_CLAIM = "middleName";
+    private static final String NICK_NAME_CLAIM = "nickName";
+    private static final String PREFERRED_USERNAME_CLAIM = "preferredUsername";
+    private static final String PICTURE_CLAIM = "picture";
+    private static final String LOCALE_CLAIM = "locale";
+
+    public String createToken(JwtUser user) {
+        return createToken(user, Instant.now().plus(expiration));
+    }
+
+    String createToken(JwtUser user, Instant expirationTime) {
+        log.debug("Generating JWT: {}", user);
+
+        var header = new JWSHeader.Builder(algorithm)
+                .type(JOSEObjectType.JWT)
                 .build();
+
+        var payload = new JWTClaimsSet.Builder()
+                .subject(user.getEmail())
+                .claim(AUTHORITIES_CLAIM, AuthorityUtils.authorityListToSet(user.getAuthorities()))
+                .claim(FULL_NAME_CLAIM, user.getFullName())
+                .claim(GIVEN_NAME_CLAIM, user.getGivenName())
+                .claim(FAMILY_NAME_CLAIM, user.getFamilyName())
+                .claim(MIDDLE_NAME_CLAIM, user.getMiddleName())
+                .claim(NICK_NAME_CLAIM, user.getNickName())
+                .claim(PREFERRED_USERNAME_CLAIM, user.getPreferredUsername())
+                .claim(PICTURE_CLAIM, user.getPicture())
+                .claim(LOCALE_CLAIM, user.getLocale())
+                .expirationTime(Date.from(expirationTime))
+                .build();
+
+        var signed = new SignedJWT(header, payload);
+        try {
+            signed.sign(signer);
+        } catch (JOSEException e) {
+            throw new RuntimeException("Failed to sing token", e);
+        }
+
+        return signed.serialize();
     }
 
-    public String toJwt(DubUserDetails userDetails) {
-        log.debug("Generation JWT: {}", userDetails);
-        return Jwts.builder()
-                .setId(UUID.randomUUID().toString())
-                .setSubject(userDetails.getUsername())
-                .setIssuedAt(new Date())
-                .setExpiration(Date.from(userDetails.getExpiresAfter()))
-                .claim(USER_ID_CLAIM, userDetails.getId())
-                .claim(
-                        AUTHORITIES_CLAIM,
-                        userDetails.getAuthorities().stream()
-                                .map(GrantedAuthority::getAuthority)
-                                .collect(Collectors.toList())
-                )
-                .signWith(signKey)
-                .compact();
-    }
+    public JwtUser parseToken(String token) {
+        final SignedJWT signed;
+        try {
+            signed = SignedJWT.parse(token);
+        } catch (ParseException e) {
+            throw new BadCredentialsException("Failed to parse token", e);
+        }
 
-    public DubUserDetails fromJwt(String jwt) {
-        Claims claims;
+        final boolean valid;
+        try {
+            valid = signed.verify(verifier);
+        } catch (JOSEException e) {
+            throw new BadCredentialsException("Failed to verify signature", e);
+        }
+        if (!valid) {
+            throw new BadCredentialsException("Invalid signature");
+        }
+
+        final JWTClaimsSet claims;
+        try {
+            claims = signed.getJWTClaimsSet();
+        } catch (ParseException e) {
+            throw new BadCredentialsException("Failed to parse claims", e);
+        }
+
+        if (claims == null) {
+            throw new BadCredentialsException("No claims extracted");
+        }
+
+        var expired = claims.getExpirationTime().toInstant().isBefore(Instant.now());
+        if (expired) {
+            throw new CredentialsExpiredException("Credentials expired");
+        }
 
         try {
-            log.debug("Parsing JWT");
-            claims = jwtParser.parseClaimsJws(jwt).getBody();
-        } catch (ExpiredJwtException e) {
-            throw new CredentialsExpiredException("User credentials have expired", e);
-        } catch (JwtException e) {
-            throw new BadCredentialsException("User credentials are incorrect", e);
+            return new JwtUser(
+                    claims.getSubject(),
+                    AuthorityUtils.createAuthorityList(claims.getStringArrayClaim(AUTHORITIES_CLAIM)),
+                    claims.getStringClaim(FULL_NAME_CLAIM),
+                    claims.getStringClaim(GIVEN_NAME_CLAIM),
+                    claims.getStringClaim(FAMILY_NAME_CLAIM),
+                    claims.getStringClaim(MIDDLE_NAME_CLAIM),
+                    claims.getStringClaim(NICK_NAME_CLAIM),
+                    claims.getStringClaim(PREFERRED_USERNAME_CLAIM),
+                    claims.getStringClaim(PICTURE_CLAIM),
+                    claims.getStringClaim(LOCALE_CLAIM)
+            );
+        } catch (ParseException | NullPointerException e) {
+            throw new BadCredentialsException("Failed to parse claims", e);
+        }
+    }
+
+    private static byte[] getOrGenerateSecret(String secret, JWSAlgorithm algorithm) {
+        final int minBitsLength;
+        try {
+            minBitsLength = MACSigner.getMinRequiredSecretLength(algorithm);
+        } catch (JOSEException e) {
+            throw new RuntimeException("Failed to calculate secret min length", e);
         }
 
-        @SuppressWarnings("unchecked")
-        DubUserDetails result = new DubUserDetails(
-                claims.get(USER_ID_CLAIM, Long.class),
-                claims.getSubject(),
-                ((List<String>) claims.get(AUTHORITIES_CLAIM, List.class)).stream()
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList()),
-                claims.getExpiration().toInstant()
-        );
-        log.debug("Parsed JWT: {}", result);
+        byte[] bytes = null;
+        if (StringUtils.hasText(secret)) {
+            bytes = secret.getBytes(StandardCharsets.UTF_8);
 
-        return result;
+            if (bytes.length < ByteUtils.byteLength(minBitsLength)) {
+                throw new RuntimeException("Too short secret, min length is " + minBitsLength);
+            }
+        }
+
+        if (bytes == null) {
+            log.warn("Generating random secret, consider setting static key for production");
+            bytes = new byte[64];
+            new SecureRandom().nextBytes(bytes);
+        }
+
+        return bytes;
     }
 }
